# rust-tsdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  main-ci.yml
code/: Cargo.toml
code/crates/e2e/: Cargo.toml
crates/tsdb-api/: Cargo.toml
crates/tsdb-api/src/: lib.rs
crates/tsdb-core/: Cargo.toml
crates/tsdb-core/src/: core.rs  error.rs  lib.rs
crates/tsdb-core/src/series/: mod.rs
crates/tsdb-core/src/series/indexes/: mod.rs
crates/tsdb-core/src/series/labels/: label.rs  label_set.rs  mod.rs
crates/tsdb-core/src/series/samples/: mod.rs  sample.rs  sample_store.rs  time_range.rs
crates/tsdb-engine/: Cargo.toml
crates/tsdb-engine/src/: index.rs  lib.rs  mem_table.rs
crates/tsdb-index/: Cargo.toml
crates/tsdb-query/: Cargo.toml
crates/tsdb-server/: Cargo.toml
crates/tsdb-server/src/: db.rs  main.rs
crates/tsdb-server/tests/: write_read.rs
crates/tsdb-storage/: Cargo.toml
e2e/src/: lib.rs
src/: api.rs  db.rs  lib.rs  main.rs  model.rs
src/dbs/: batched_index_db.rs  batched_single_lock_db.rs  concurrent_index_db.rs  mod.rs  single_lock_index_db.rs
src/storage/: index.rs  mem_table.rs  mod.rs
src/storage/indexes/: concurrent_index.rs  mod.rs  simple_index.rs
tests/: bench.rs  write_read.rs
