[workspace]
resolver="3"
members = ["crates/tsdb-api","crates/tsdb-core", "crates/tsdb-engine", "crates/tsdb-query", "crates/tsdb-server"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/janzaborski/rust-tsdb"

[workspace.dependencies]
axum = "0.8.7"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = "0.29.0"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
parking_lot = "0.12.5"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tower = { version = "0.5.2", features = ["util"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.clippy]
all = {level = "deny", priority = -1}

[profile.release]
lto = "fat"
codegen-units = 1
