[package]
name = "tsdb"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/janzaborski/rust-tsdb"

[dependencies]
axum = "0.8.7"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dashmap = "6.2.1"
arc-swap = "1.9.2"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
rand = { version = "0.9", features = ["small_rng"] }

[lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = "fat"
codegen-units = 1
