[package]
name = "tsdb-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tsdb-core = { path = "../tsdb-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
